# atlas-halo-backend

./: .dockerignore  .env.production  .env.production.example  .gitignore  .railway-deploy  .railwayignore  BACKUP_RESTORE_GUIDE.md  CLEANUP_REPORT.md  COMPREHENSIVE_HANDOFF.md  CRITICAL_CHECKS_COMPLETE.md  DEPLOYMENT_STATUS.md  DISTRICT_POLYGONS_STRATEGY.md  Dockerfile  FINAL_SOLUTION.md  FINAL_STATUS.md  MIGRATION_INSTRUCTIONS.md  MOBILE_APP_TESTING_GUIDE.md  MOBILE_DEPENDENCIES_FIXED.md  MONITORING_SETUP_SUMMARY.md  POLYGON_VISIBILITY_FIXES.md  PRODUCTION_READY_STATUS.md  PRODUCTION_SETUP.md  Procfile  ROOT_CAUSE_AND_FIX.md  SENSOR_FUSION_IMPLEMENTATION.md  SENTRY_SETUP_GUIDE.md  SOLUTION_SUMMARY.md  TEST_RESULTS.md  TODO.md  UPTIMEROBOT_SETUP_GUIDE.md  VERSION.txt  __init__.py  enable_postgis_direct.py  fly.toml  halo_atlas_api_contracts.py  halo_test_atlas_integration.py  import_data.py  import_to_flyio.sh  init_database.py  main 2.py  (+11 more)
_ARCHIVED/projects/Everything/services/core-api/: .env.example  Makefile  OCTOPART_STATUS.md  README.md  alembic.ini  debug_and_fix_issues.py  platform_test_results.json  pyproject.toml  test_ai_endpoints.py  test_capabilities.py  test_octopart_direct.py  test_platform_comprehensive.py
_ARCHIVED/projects/Everything/services/core-api/alembic/: env.py
_ARCHIVED/projects/Everything/services/core-api/app/: __init__.py  main.py
_ARCHIVED/projects/SAIT_01 Firmware:Software/nrf_connect_sdk/: ADVANCED_TRAINING_SUMMARY.md  BUILD_INTEGRATION.md  CMakeLists.txt  FINAL_STRESS_TEST_ASSESSMENT.md  IMMEDIATE_IMPROVEMENTS_COMPLETED.md  PRODUCTION_INTEGRATION_COMPLETE.md  PRODUCTION_MODEL_SPEC.md  SAIT01_DEPLOYMENT_GUIDE.md  SAIT01_DEPLOYMENT_REPORT.md  SAIT01_POWER_OPTIMIZATION_TEST_REPORT.md  STRESS_TEST_RESULTS.md  TINYML_TEST_RESULTS.md  VULNERABILITY_REPORT.md  adaptive_audio.c  adaptive_audio.h  advanced_ensemble_fix.py  advanced_production_training.py  advanced_spectrographic_model.py  advanced_spectrum_analysis.py  advanced_spectrum_validation.py  automated_cycle_runner.py  balance_dataset.py  balanced_multi_class_fix.py  battlefield_audio_enhancement_plan.py  battlefield_audio_integration.py  battlefield_training_results.json  best_production_model.keras  break_95_barrier.py  brutal_stress_test.py  comprehensive_validation_results.json  confusion_resolution_system.py  coordinator_election.c  create_battlefield_dataset.py  cycle_1_results.json  cycle_2_results.json  cycle_2_validation_results.json  cycle_3_results.json  cycle_4_advanced_training.py  cycle_5_spectrographic_mastery.py  cycle_comparison_results.json  (+104 more)
api/: auth_endpoints.py  (+15 more)
(+4322 files in other folders)
